# pixel_engine

./: .gitignore  Cargo.toml  README.md  build_wasm.sh  flake.nix  index.html
.cargo/: config.toml
examples/: circle.rs  colors.rs  doomfire.rs  extentions.rs  file_explorer.rs  greyscale.rs  inputs.rs  lines.rs  mouse.rs  random.rs  template.rs  text.rs  triangle.rs  triangle_color.rs  triangle_rounded.rs  windows.rs
examples/decal_dungeons/: Cargo.toml  README.md
examples/decal_dungeons/src/: main.rs
examples/fake_mode7/: Cargo.toml
examples/fake_mode7/src/: lib.rs  main.rs
examples/fps_pixel/: Cargo.toml
examples/fps_pixel/src/: lib.rs  main.rs  maps.rs
examples/fps_pixel_mk2/: Cargo.toml
examples/fps_pixel_old/: Cargo.toml
examples/fps_pixel_old/maps/: dev.map
examples/fps_pixel_old/src/: main.rs
examples/intersection/: Cargo.toml  README
examples/intersection/src/: lib.rs  main.rs
examples/newton_fractal/: Cargo.toml
examples/newton_fractal/src/: expr.rs  lib.rs  main.rs
examples/newton_fractal/src/expr/: token_stream.rs
examples/raycast_world/: Cargo.toml
examples/simple/: Cargo.toml
examples/simple/src/: circle.rs  colors.rs  decal.rs  doomfire.rs  file_explorer.rs  grid.rs  inputs.rs  lib.rs  lines.rs  mouse.rs  random.rs  subsprite.rs  template.rs  text.rs  triangle_color.rs  triangle_rounded.rs  triangles.rs
examples/wave-function-collapse/: Cargo.toml
examples/wave-function-collapse/src/: array.rs  lib.rs  reflexions.rs  wfc.rs
examples/web/: Cargo.toml  compile.sh  compile_release.sh
examples/web/src/: index.html  lib.rs
examples/world_transform/: Cargo.toml
examples/world_transform/examples/: cad.rs  world_transform.rs
examples/world_transform/src/: lib.rs
examples/world_transform_examples/: Cargo.toml
examples/world_transform_examples/src/: cad.rs  lib.rs  world_transform.rs
extensions/pixel_engine_console/: Cargo.toml  README.md
extensions/pixel_engine_console/examples/: test.rs
extensions/pixel_engine_console/src/: console_logger.rs  lib.rs
extensions/pixel_engine_textinput/: Cargo.toml
extensions/pixel_engine_textinput/src/: lib.rs
pixel_engine/: Cargo.toml
pixel_engine/examples/: circle.rs  colors.rs  decal.rs  doomfire.rs  file_explorer.rs  grid.rs  inputs.rs  lines.rs  mouse.rs  random.rs  template.rs  text.rs  triangle_color.rs  triangle_rounded.rs  triangles.rs
pixel_engine/src/: lib.rs
pixel_engine/src/engine/: decals.rs  game.rs  inputs.rs  logic.rs  mod.rs  screen.rs  traits.rs
pixel_engine_backend/: Cargo.toml  Makefile
pixel_engine_backend/shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
pixel_engine_backend/src/: decals.rs  lib.rs  texture.rs
pixel_engine_backend/src/decals/: gpu_vector.rs  swap_buffer.rs
pixel_engine_core/: Cargo.toml
pixel_engine_core/examples/: circle.rs  file_explorer.rs  grid.rs  inputs.rs  lines.rs  mouse.rs  text.rs  triangle_rounded.rs  triangles.rs
pixel_engine_core/src/: lib.rs
pixel_engine_core/src/engine/: inputs.rs  logic.rs  mod.rs
pixel_engine_draw/: Cargo.toml
pixel_engine_draw/examples/: _print_sprite.rs  sub_sprite.rs
pixel_engine_draw/src/: graphics.rs  lib.rs  traits.rs  vector2.rs
shaders/: rect_150.glslf  rect_150.glslv
src/: graphics.rs  handler.rs  keyboard.rs  lib.rs  logic.rs  screen.rs
src/engine/: graphics.rs  handler.rs  image_buffer.rs  inputs.rs  keyboard.rs  logic.rs  mod.rs  screen.rs  traits.rs
