[package]
name = "pixel_engine"
version = "0.5.5"
authors = ["maix0 <maix522@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A recreation of the olcPixelEngine by javidx9 written in Rust"
repository = "https://github.com/maix0/pixel_engine"
exclude = ["Cargo.lock"]
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html





[dependencies]
pixel_engine_backend = "0.5.3"
pixel_engine_draw    = "0.5.3"
futures = "0.3.25"
instant = "0.1.12"

[target.'cfg(target_arch="wasm32")'.dependencies]
web-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"
console_error_panic_hook = "0.1.7"
wgpu = { version = "0.14.0", features = ["webgl"] }

