[package]
name = "pixel_engine_backend"
version = "0.7.0"
authors = ["maix0 <maix522@gmail.com>"]
edition = "2018"
license = "MIT"
description = "An thin layer around wgpu that allow the modification of a texutre displayed on the screen"
repository = "https://github.com/maix0/pixel_engine"
exclude = ["Cargo.lock"]
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
webgl = ["wgpu/webgl"]

[dependencies]
wgpu = { version = "0.14.0", features = ["spirv"] }
bytemuck = { version = "1.12.3", features = ["derive"] }
winit = { version = "0.27.5", features = [
  "wayland",
] } #, default-features=false}
float_next_after = "1.0.0"

# [target.'cfg(target_arch="wasm32")'.dependencies]
# getrandom = { version = "0.2", features = ["js"] }
# web-sys = "*"
