[package]
name = "pixel_engine_core"
version = "0.1.0"
authors = ["maix0 <maix522@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.10.2"
pixel_engine_draw = {path = "../pixel_engine_draw"}
pixel_engine_backend = {path = "../pixel_engine_backend"}
futures = "0.3.5"

[dev-dependencies]
rand= "0.7.3"
