[package]
name = "pixel_engine_draw"
version = "0.3.0"
authors = ["maix0 <maix522@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The graphics crate used by the pixel_engine"
repository = "https://github.com/maix0/pixel_engine"
exclude = ["Cargo.lock"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
image = "0.23.14"
