[package]
name = "pixel_engine_draw"
version = "0.5.4"
authors = ["maix0 <maix522@gmail.com>"]
edition = "2021"
license = "MIT"
description = "The graphics crate used by the pixel_engine"
repository = "https://github.com/maix0/pixel_engine"
exclude = ["Cargo.lock"]
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
image = "0.24.5"
paste = "1.0.9"
slab = "0.4.7"
parking_lot = "0.12.1"
once_cell = { version = "1.16.0", features = ["parking_lot", "std", "alloc"] }
