[package]
name = "decal_dungeons"
version = "0.1.0"
authors = ["maix0 <maix522@gmail.com>"]
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
pixel_engine = "0.6.0"
rust-embed = { version = "6.4.2", features = ["interpolate-folder-path"] }
