[package]
name = "fps_pixel"
version = "0.1.0"
authors = ["maix0 <maix522@gmail.com>"]

edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]



[[bin]]
name="map-edit"


[dependencies]
pixel_engine = "0.8.0"
ron = "0.7.1"
serde = "1.0.147"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"

