[package]
name = "intersection"
version = "0.1.0"
authors = ["maix0 <maix522@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_arch="wasm32")'.dependencies]
pixel_engine = {version = "*"}

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
pixel_engine = "*"
