[package]
name = "intersection"
version = "0.1.0"
authors = ["maix0 <maix522@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]



[dependencies]
pixel_engine = "0.4.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.81"
