[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]



[dependencies]

pixel_engine = "0.4.1"
rand = "0.8.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.78"
getrandom= {version="0.2.3", features=["js"]}