[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]



[dependencies]
pixel_engine="0.3.5"
fps_pixel = {path = "../fps_pixel"}
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.23"
wgpu = {version="0.12.0", features=["webgl"]}
console_error_panic_hook = "0.1.7"



[dependencies.web-sys]
version = "0.3.55"
features = [
  'console',
  'Location',
  'HtmlCanvasElement'
]