[package]
name = "world_transform_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
pixel_engine= "0.4.1"
world_transform = {path="../world_transform"}


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.78"
