[package]
name = "pixel_engine_console"
version = "0.0.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["info"]
off = []
error = []
warn = []
info = []
debug = []
trace = []

[dependencies]
log = { version = "0.4.17", features = ["std"] }
once_cell = "1.16.0"
pixel_engine = { version = "0.6.0" }
textwrap = { version = "0.16.0", default-features = false, features = [
  "unicode-linebreak",
] }
